Permit hints in DISSECTOR_ASSERT calls
This issue was migrated from bug 7142 in our old bug tracker.
Original bug information:
Reporter: Evan Huus
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
dissector-assert-hint.patch: [PATCH 0/] Add DISSECTOR_ASSERT_HINT() macro
conversation-hint-convert.patch: [PATCH 1/] Convert a few instances in conversation.c to use the new macro
dissector-assert-hint-more.patch: [PATCH 2/*] Convert some calls.